fixed spacing

--- a/style.css
+++ b/style.css
@@ -9,28 +9,16 @@ body {
     font-size: 20px;
 }
 
-.cubeContainer {
-    perspective: 1000px;
-}
-
 .cubeContainer .cube {
-    width: 400px;
-    height: 400px;
-    margin: 12% auto 0; /* Default margin for larger screens */
+    width: 350px;
+    height: 350px;
+    margin: auto; 
     transform-style: preserve-3d;
 }
 
-/* Media query for smaller screens */
-@media screen and (max-width: 767px) {
-    .cubeContainer .cube {
-        margin: 30% auto 0; /* Adjusted margin for smaller screens */
-    }
-}
-
-
 .cubeContainer .cube-face {
-width: 400px;
-height: 400px;
+width: 350px;
+height: 350px;
 background: rgb(4, 4, 4);
 font-size: 40px;
 color: white;
@@ -43,32 +31,35 @@ backface-visibility: hidden;
 
 .cubeContainer .front {
     background-color: rgb(40, 40, 40);
-    transform: translateZ(200px);
+    transform: translateZ(175px);
 }
 
 .cubeContainer .back {
     background-color: rgb(40, 40, 40);
-    transform: rotateY(180deg) translateZ(200px);
+    transform: rotateY(180deg) translateZ(175px);
 }
 
 .cubeContainer .left {
     background-color: rgb(35, 35, 35);
-    transform: rotateY(-90deg) translateZ(200px)
+    transform: rotateY(-90deg) translateZ(175px)
 
 }
 
 .cubeContainer .right {
     background-color: rgb(35, 35, 35);
-    transform: rotateY(90deg) translateZ(200px)
+    transform: rotateY(90deg) translateZ(175px)
 }
 
 .cubeContainer .top {
     background-color: rgb(30, 30, 30);
-    transform: rotateX(90deg) translateZ(200px)
+    transform: rotateX(90deg) translateZ(175px)
 }
 
 .cubeContainer .bottom {
     background-color: rgb(30, 30, 30);
-    transform: rotateX(-90deg) translateZ(200px)
+    transform: rotateX(-90deg) translateZ(175px)
 }
 
+h1 {
+    margin-bottom: 150px;
+}
